# AES-256-GCM-Python-Tool

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  secure_vault.py  test_release_workflow.py  test_secure_vault.py
.github/workflows/: release.yml
docs/: release-provenance.md
tools/: benchmark_memory_profile.py  generate_release_artifacts.py
