[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aes-secure-vault"
version = "1.0.0"
description = "AES-256-GCM encryption with Argon2id key derivation. Self-contained JSON payloads, no shared state."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Pongo" }]
keywords = ["aes", "aes-256", "gcm", "argon2", "argon2id", "encryption", "cryptography", "vault"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
secure-vault = "secure_vault:main"

[project.urls]
Repository = "https://github.com/meidielo/AES-256-GCM-Python-Tool"

[tool.hatch.build.targets.wheel]
only-include = ["secure_vault.py", "py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "secure_vault.py",
    "py.typed",
    "test_secure_vault.py",
    "index.html",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
